# datamedic

./: .env.example  .gitignore  README.md  config.py  metric_data.csv  pyproject.toml  requirements.txt  sample.csv  server.py
agent/: agent.py  prompts.py
api/: routes.py
data/: causal_graph.py  causal_relations.xlsx  loader.py
docs/superpowers/plans/: 2026-05-12-hospital-metrics-assistant.md  2026-05-13-modern-session-ui.md  2026-05-13-typescript-frontend-migration.md  2026-05-14-project-wide-refactor.md  2026-05-15-backend-json-conversation-persistence.md  2026-05-15-complete-chart-system.md  2026-05-15-project-audit-optimization.md
docs/superpowers/specs/: 2026-05-12-hospital-metrics-assistant-design.md  (+5 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.setup.ts
frontend/src/: App.css  App.test.tsx  App.tsx  api.test.ts  api.ts  chartTheme.test.ts  chartTheme.ts  format.ts  plotly-shims.d.ts  plotly.d.ts  plotly.test.ts  plotly.ts  speechSegments.test.ts  speechSegments.ts  storage.test.ts  storage.ts  testHelpers.ts  types.ts  viteConfig.test.ts  voice.test.ts  voice.ts  voiceTranscript.test.ts  voiceTranscript.ts
src/datamedic/: app.py  chat_store.py  config.py  server.py
tests/: conftest.py  test_agent.py  test_api.py  test_causal_graph.py  test_causal_tool.py  test_chat_store.py  test_department_overview.py  test_loader.py  test_pandas_tool.py  test_query_tool.py  test_validation.py  test_viz_tool.py
tools/: causal_tool.py  pandas_tool.py  query_tool.py  viz_tool.py
(+28 files in other folders)
