[project]
name = "datamedic"
version = "0.1.0"
description = "医院运营指标智能分析助手"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "langchain>=1.0.0",
    "langchain-openai>=0.3.0",
    "langgraph>=1.0.0",
    "langgraph-checkpoint>=2.0.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "networkx>=3.0",
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
    "dashscope>=1.10.0",
    "websockets>=12.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datamedic"]

[dependency-groups]
dev = ["pytest>=7.4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
